--- a/mark1.ipynb
+++ b/mark1.ipynb
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1349,14 +1349,15 @@
        "0.3918000000000001"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "TE = 0\n",
-    "for j in range(len(y_test)):\n",
+    "k = len(y_test)\n",
+    "for j in range(k):\n",
     "    TE += (y_test[j] - y_pred[j])**2\n",
     "    \n",
     "TE"
